--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,9 @@
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
   <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2MSqn7DYEK1LpaH1z_oOlMzatQDq2zu8"></script>
 </head>
 
 <body>
